# microservices_login_service

./: Cargo.toml  LICENCE  README.md  Rocket.toml
migrations/: 20230415101712_user_model_with_email_and_password.down.sql  20230415101712_user_model_with_email_and_password.up.sql  20230418050512_user_roles.down.sql  20230418050512_user_roles.up.sql  20230421071811_user_to_role_unique_constraint.down.sql  20230421071811_user_to_role_unique_constraint.up.sql  20230430152746_employee_id_field_to_user.down.sql  20230430152746_employee_id_field_to_user.up.sql
src/: cli_handler.rs  database_connection.rs  lib.rs  main.rs  password_utils.rs  rabbitmq_main.rs  rocket_cors.rs  rocket_main.rs
src/consumers/: README.md  create_user.rs  delete_user.rs  mod.rs  overwrite_roles.rs
src/guards/: user_token.rs
src/models/: mod.rs  user.rs  user_role.rs
src/models/user/: create.rs  delete_by_email.rs  delete_by_employee_id.rs  exists.rs  load.rs  mod.rs
src/models/user_role/: add_roles.rs  add_roles_by_email.rs  add_roles_by_employee_id.rs  check.rs  delete_roles_by_employee_id.rs  has_permission.rs  mod.rs  role_enum.rs
src/views/: add_role.rs  add_roles.rs  add_user.rs  base.rs  check_access_token.rs  check_role.rs  index.rs  login.rs  mod.rs  register.rs  user_exists.rs
tests/: mod.rs
tests/models/: mod.rs  user.rs  user_role.rs
tests/models/user/: create_and_load.rs  delete_by_email.rs  delete_user_by_employee_id.rs  mod.rs
tests/models/user_role/: add_roles_by_email.rs  add_roles_by_employee_id.rs  delete_roles_by_employee_id.rs  mod.rs
tests/views/: index.rs  login.rs  mod.rs
