[package]
name = "login_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64ct = {version = "1.6.0", features=["alloc"]}
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = [ "runtime-async-std-rustls", "postgres" ] }
