[package]
name = "login_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp_serde = "0.3.0"
amqprs = { version = "1.2.1", features = ["urispec"] }
base64ct = {version = "1.6.0", features=["alloc"]}
chrono = "0.4.24"
dotenv = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
rocket_okapi = { version="0.8.0-rc.2", features = ["swagger"] }
schemars = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.6"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres" ] }
